@@ -1,14 +1,13 @@
 package nars.budget;
 
-import com.google.common.collect.Iterators;
-import com.gs.collections.api.RichIterable;
-import com.gs.collections.api.list.MutableList;
-import com.gs.collections.api.tuple.Pair;
 import com.gs.collections.impl.map.mutable.UnifiedMap;
+import nars.Global;
 
+import javax.annotation.Nullable;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.Iterator;
+import java.util.List;
 import java.util.function.Consumer;
 
 /** priority queue which merges equal tasks and accumulates their budget.
@@ -28,8 +27,8 @@ public class ItemAccumulator<I extends Item> {
 //        }
 //    };
 
-    final static Comparator<? super Pair<? extends Item,? extends Item>> highestFirst = new HighestFirstComparator();
-    final static Comparator<? super Pair<? extends Item,? extends Item>> lowestFirst = new LowestFirstComparator();
+    final static Comparator<Item> highestFirst = new HighestFirstComparator();
+    final static Comparator<Item> lowestFirst = new LowestFirstComparator();
 
 
     public ItemAccumulator(@Deprecated ItemComparator comp) {
@@ -84,46 +83,72 @@ public class ItemAccumulator<I extends Item> {
 
     public I lowest() {
         if (buffer.isEmpty()) return null;
-        return lowestFirstKeyValues().getFirst().getTwo();
+        return lowestFirstKeyValues().get(0);
     }
 
     public I highest() {
         if (buffer.isEmpty()) return null;
-        return lowestFirstKeyValues().getLast().getTwo();
+        return highestFirstKeyValues().get(0);
     }
 
 
-
-    private MutableList<Pair<I,I>> lowestFirstKeyValues() {
-        return buffer.keyValuesView().toSortedList(lowestFirst);
+    private List<I> lowestFirstKeyValues() {
+        return lowestFirstKeyValues(null);
     }
-    private MutableList<Pair<I, I>> highestFirstKeyValues() {
-        return buffer.keyValuesView().toSortedList(highestFirst);
+    private List<I> highestFirstKeyValues() {
+        return highestFirstKeyValues(null);
+    }
+
+    private List<I> lowestFirstKeyValues(@Nullable List<I> result) {
+        return sortedKeyValues(lowestFirst, result);
+    }
+
+    private List<I> highestFirstKeyValues(@Nullable List<I> result) {
+        return sortedKeyValues(highestFirst, result);
+    }
+
+    private List<I> sortedKeyValues(Comparator<Item> c, List<I> result) {
+        if (result == null)
+            result = Global.newArrayList(buffer.size());
+        else {
+            result.clear();
+        }
+
+        result.addAll(buffer.values());
+        result.sort(c);
+
+        return result;
     }
 
     /** iterates the items highest first */
-    public Iterator<I> iterateSorted() {
-        return Iterators.transform( highestFirstKeyValues().iterator(),
-                input -> input.getTwo() );
-    }
-    public Iterator<I> iterateSortedInverse() {
-        return Iterators.transform( lowestFirstKeyValues().iterator(),
-                input -> input.getTwo() );
+    public Iterator<I> iterateHighestFirst() {
+        return highestFirstKeyValues().iterator();
     }
 
-    public int removeLowest(final int n) {
+    /** iterates the items highest first */
+    public Iterator<I> iterateHighestFirst(List<I> temporary) {
+        return highestFirstKeyValues(temporary).iterator();
+    }
+
+    public Iterator<I> iterateLowestFirst() {
+        return lowestFirstKeyValues().iterator();
+    }
+
+    public int removeLowest(final int n, @Nullable List<I> temporary) {
         final int s = buffer.size();
         if (s <= n) {
             buffer.clear();
             return s;
         }
 
-        MutableList<Pair<I, I>> lf = lowestFirstKeyValues();
+        final List<I> lf = lowestFirstKeyValues(temporary);
 
         int r;
         for (r = 0; r < n; r++) {
-            buffer.remove( lf.get(r).getOne() );
+            buffer.remove( lf.get(r) );
         }
+
+        temporary.clear();
 
         return r;
     }
@@ -136,12 +161,12 @@ public class ItemAccumulator<I extends Item> {
     /** if size() capacity, remove lowest elements until size() is at capacity
      * @return how many removed
      * */
-    public int limit(int capacity, Consumer<I> onRemoved) {
+    public int limit(int capacity, Consumer<I> onRemoved, @Nullable List<I> temporary) {
 
         int numToRemove = size() - capacity;
 
         if (numToRemove > 0)
-            return removeLowest(numToRemove);
+            return removeLowest(numToRemove, temporary);
 
         return 0;
     }
@@ -153,17 +178,15 @@ public class ItemAccumulator<I extends Item> {
     }
 
 
-    static final class HighestFirstComparator<I extends Item> implements Comparator<Pair<I, I>> {
-        @Override
-        public int compare(Pair<I, I> a, Pair<I, I> b) {
-            return Float.compare(b.getTwo().getPriority(), a.getTwo().getPriority());
+    static final class HighestFirstComparator<I extends Item> implements Comparator<I> {
+        @Override public final int compare(final I a, final I b) {
+            return Float.compare(b.getPriority(), a.getPriority());
         }
     }
 
-    static final class LowestFirstComparator<I extends Item> implements Comparator<Pair<I, I>> {
-        @Override
-        public int compare(Pair<I, I> a, Pair<I, I> b) {
-            return Float.compare(a.getTwo().getPriority(), b.getTwo().getPriority());
+    static final class LowestFirstComparator<I extends Item> implements Comparator<I> {
+        @Override public final int compare(final I a, final I b) {
+            return Float.compare(a.getPriority(), b.getPriority());
         }
     }
 }
